--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,8 @@
     ],
     "require": {
         "wp-cli/php-cli-tools": "^0.11.17"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.7"
     }
 }
